# dfn-modelling-workshop-for-nuclear-waste-repositories-2025

./: .gitignore  README.md  flake.nix  per-system.nix
.github/workflows/: main.yaml
fractopo_to_porepy_and_opengeosys/: DFNbyPorePy_to_OGS_fractopo_inputs.ipynb  README.md  generate_fracture_parameters.py  pyproject.toml  requirements.txt
fractopo_to_porepy_and_opengeosys/data/: og1_area_with_dip_data.geojson  og1_clipped_traces.geojson
nix/: ci.nix
